--- a/src/app/features/results/results-list/results-list.component.html
+++ b/src/app/features/results/results-list/results-list.component.html
@@ -1,74 +1,76 @@
 <main class="container">
-  <div class="filters-card rounded-card" *ngIf="isDesktop">
-    <!-- Desktop searchbar -->
-    <div class="rounded-search-bar box-shadow-2">
-      <input type="search" [formControl]="searchControl" placeholder="Buscar" (keyup.enter)="doSearch(1)">
-      <button *ngIf="!!postFilters.search && postFilters.search === searchControl.value" mat-icon-button (click)="clearSearchControl()">
-        <mat-icon>close</mat-icon>
-      </button>
-      <button *ngIf="!!!postFilters.search || postFilters.search !== searchControl.value" mat-icon-button (click)="doSearch(1)">
-        <mat-icon>search</mat-icon>
-      </button>
-    </div>
-
-    <mat-divider></mat-divider>
+  <div class="filters-card rounded-card">
+    <button
+      class="filters-card__button rounded-button-slim"
+      (click)="showFilterCardContent = !isDesktop ? !showFilterCardContent : true">
+        <span>Filtros y búsqueda</span>
+        <mat-icon class="small-icon">
+          {{ showFilterCardContent && !isDesktop ? 'expand_less' : 'filter_alt' }}
+        </mat-icon>
+    </button>
+    <div class="filters-card__content" *ngIf="showFilterCardContent">
+      <!-- Searchbar -->
+      <div class="rounded-search-bar box-shadow-2">
+        <input type="search" [formControl]="searchControl" placeholder="Buscar" (keyup.enter)="doSearch(1)">
+        <button *ngIf="!!postFilters.search && postFilters.search === searchControl.value" mat-icon-button (click)="clearSearchControl()">
+          <mat-icon>close</mat-icon>
+        </button>
+        <button *ngIf="!!!postFilters.search || postFilters.search !== searchControl.value" mat-icon-button (click)="doSearch(1)">
+          <mat-icon>search</mat-icon>
+        </button>
+      </div>
   
-    <!-- Desktop filters -->
-    <div class="filters__selects">
-      <app-rounded-select
-        class="bg-text-academic-level box-shadow-2"
-        baseText="Nivel Académico"
-        [control]="academicLevelControl"
-        [options]="academicLevelsList"
-        [resetButton]="true"
-        [loading]="isAcademicLevelsLoading">
-      </app-rounded-select>
-      <app-rounded-select
-        class="bg-text-axis box-shadow-2"
-        baseText="Eje"
-        [control]="axisControl"
-        [hasGroups]="true"
-        [options]="subjectWithAxis"
-        [searchInput]="true"
-        searchPlaceholder="Busca un eje o asignatura"
-        [resetButton]="true"
-        [loading]="isAxesLoading">
-      </app-rounded-select>
-      <app-rounded-select
-        class="bg-text-subject box-shadow-2"
-        baseText="Asignatura"
-        [control]="subjectControl"
-        [options]="subjectList"
-        [searchInput]="true"
-        searchPlaceholder="Busca una asignatura"
-        [resetButton]="true"
-        [loading]="isSubjectsLoading">
-      </app-rounded-select>
-      <app-rounded-select
-        class="bg-text-blue-white box-shadow-2"
-        baseText="Ordenar por"
-        [control]="orderingControl"
-        [options]="orderingList">
-      </app-rounded-select>
-  
-      <button class="reset-filters-button" *ngIf="hasFilters" (click)="removeFilters()">
-        <mat-icon class="small-icon">delete</mat-icon>
-        <span class="fw-600">Borrar filtros</span>
-      </button>
+      <mat-divider></mat-divider>
+    
+      <!-- Filters -->
+      <div class="filters__selects">
+        <app-rounded-select
+          class="bg-text-academic-level box-shadow-2"
+          baseText="Nivel Académico"
+          [control]="academicLevelControl"
+          [options]="academicLevelsList"
+          [resetButton]="true"
+          [loading]="isAcademicLevelsLoading">
+        </app-rounded-select>
+        <app-rounded-select
+          class="bg-text-axis box-shadow-2"
+          baseText="Eje"
+          [control]="axisControl"
+          [hasGroups]="true"
+          [options]="subjectWithAxis"
+          [searchInput]="true"
+          searchPlaceholder="Busca un eje o asignatura"
+          [resetButton]="true"
+          [loading]="isAxesLoading">
+        </app-rounded-select>
+        <app-rounded-select
+          class="bg-text-subject box-shadow-2"
+          baseText="Asignatura"
+          [control]="subjectControl"
+          [options]="subjectList"
+          [searchInput]="true"
+          searchPlaceholder="Busca una asignatura"
+          [resetButton]="true"
+          [loading]="isSubjectsLoading">
+        </app-rounded-select>
+        <app-rounded-select
+          class="bg-text-blue-white box-shadow-2"
+          baseText="Ordenar por"
+          [control]="orderingControl"
+          [options]="orderingList">
+        </app-rounded-select>
+    
+        <button class="reset-filters-button" *ngIf="hasFilters" (click)="removeFilters()">
+          <mat-icon class="small-icon">delete</mat-icon>
+          <span class="fw-600">Borrar filtros</span>
+        </button>
+      </div>
     </div>
   </div>
   
   <div class="main-content">
-
-    <!-- Filter tags and mobile button -->
+    <!-- Filter tags and pagination -->
     <div class="fs-small flex-end-center flex-wrap gap-05">
-
-      <!-- Filter mobile button -->
-      <button class="filters-button rounded-button-slim box-shadow-1" *ngIf="!this.isDesktop">
-        <span>Filtros y búsqueda</span>
-        <mat-icon class="small-icon">filter_alt</mat-icon>
-      </button>
-
       <!-- Filter tags -->
       <div class="filter-tags flex-center-center gap-025 flex-wrap">
         <button
@@ -101,7 +103,7 @@
         </button>
       </div>
     
-      <!-- Paginations -->
+      <!-- Pagination -->
       <div class="pagination flex-center-center gap-05">
         <span class="fw-700 fs-regular">
           {{ (pageInfo?.maxPage ?? 0) * (postFilters.page! - 1) + 1 }}
