--- a/src/assets/styles/design/_components.scss
+++ b/src/assets/styles/design/_components.scss
@@ -96,15 +96,16 @@
 // Cards
 .rounded-card {
     background-color: hsl(var(--clr-white));
-    border-radius: 30px;
     box-shadow: 0 3px 4px rgba(0, 0, 0, .2);
-    padding: 1.2rem;
+
+    border-radius: 15px;
+    padding: 1rem;
 }
 
-@media (max-width: calc(48rem - 1px)) {
+@media (min-width: 48rem) {
     .rounded-card {
-        border-radius: 25px;
-        padding: 1rem;
+        border-radius: 30px;
+        padding: 1.2rem;
     }
 }
 
