--- a/src/app/layouts/main-layout/main-layout.component.html
+++ b/src/app/layouts/main-layout/main-layout.component.html
@@ -1,7 +1,7 @@
 <mat-sidenav-container>
     <mat-sidenav-content>
         <app-navbar id="navbar"></app-navbar>
-        <div>
+        <div class="content">
             <router-outlet></router-outlet>
         </div>
     </mat-sidenav-content>
