--- a/src/assets/styles/_index.scss
+++ b/src/assets/styles/_index.scss
@@ -4,5 +4,6 @@
 @import './helpers/util';
 @import './helpers/misc';
 @import './helpers/display';
+@import './helpers/box-model';
 @import './material/overloads';
 @import './design/colors';
