--- a/src/app/shared/components/report-dialog/report-dialog.component.html
+++ b/src/app/shared/components/report-dialog/report-dialog.component.html
@@ -1,19 +1,34 @@
-<h1>Reportar {{ reportTypeName }}</h1>
-<p>Puedes reportar {{ reportTypeName }}, solo dinos el motivo y lo revisaremos a la brevedad.</p>
-<div class="flex_column flex_center">
-    <mat-form-field class="description-textarea" appearance="outline">
-        <mat-label>Descripción</mat-label>
-        <textarea matInput 
-          [formControl]="form"
-          cdkTextareaAutosize cdkAutosizeMinRows="3" cdkAutosizeMaxRows="20">
-        </textarea>
+<h1>Crear un reporte 🕵️</h1>
+<p class="m-y-1">Completa los siguientes datos explicando el motivo de tu reporte y lo revisaremos a la brevedad.</p>
+<div mat-dialog-content>
+  <form [formGroup]="form" (ngSubmit)="createReport($event)">
+    <mat-form-field appearance="outline" class="full-width-input">
+      <mat-label>¿Qué quieres reportar?</mat-label>
+      <mat-select formControlName="type">
+        <mat-option [value]="reportType.POST">Reportar publicación</mat-option>
+        <mat-option [value]="reportType.USER">Reportar usuario</mat-option>
+      </mat-select>
     </mat-form-field>
-    <mat-error *ngIf="form?.invalid && form?.touched">Debes ingresar una descripción con menos de 1000 carácteres.</mat-error>
-    <app-square-loader *ngIf="isLoading"></app-square-loader>
-    <button
-        mat-raised-button
-        color="warn"
-        [disabled]="!form.valid"
-        (click)="createReport()"
-        *ngIf="!isLoading">Enviar reporte</button>
+  
+    <mat-form-field appearance="outline" class="full-width-input">
+      <mat-label>Descripción</mat-label>
+      <textarea matInput formControlName="description" cdkTextareaAutosize cdkAutosizeMinRows="3"
+        cdkAutosizeMaxRows="20">
+      </textarea>
+      <mat-hint align="end">{{ form.controls.description.value?.length ?? 0 }} / 1000</mat-hint>
+      <mat-error *ngIf="form.controls.description.invalid">
+        Debes ingresar una descripción con menos de 1000 carácteres.
+      </mat-error>
+    </mat-form-field>
+  </form>
+</div>
+<div mat-dialog-actions align="end">
+  <button mat-flat-button type="button" mat-dialog-close>
+    Cancelar
+  </button>
+
+  <button mat-raised-button [color]="form.valid ? 'primary' : 'warn'" [disabled]="isLoading" type="submit">
+    <span>Enviar reporte</span>
+    <mat-icon class="fs-regular">send</mat-icon>
+  </button>
 </div>
