--- a/src/app/shared/components/rounded-select/rounded-select.component.html
+++ b/src/app/shared/components/rounded-select/rounded-select.component.html
@@ -1,13 +1,9 @@
-<button class="rounded-button" [disabled]="disabled" (click)="toggleSelect(custom_select)" aria-hidden="true">
-  <span>{{ textValue ?? baseText }}</span>
-  <mat-icon>expand_more</mat-icon>
-</button>
-
-<mat-form-field class="sr-only">
-  <mat-label>{{ textValue }}</mat-label>
-  <mat-select [formControl]="control!" disableOptionCentering #custom_select>
+<mat-form-field class="hidden-select">
+  <mat-label>{{ textValue ?? baseText }}</mat-label>
+  <mat-select [formControl]="control!" disableOptionCentering panelClass="rounded-select-panel" #custom_select>
     <mat-option *ngIf="searchInput">
-      <ngx-mat-select-search [formControl]="search" placeholderLabel="{{ searchPlaceholder }}" [searching]="loading"
+      <ngx-mat-select-search [disableInitialFocus]="true" [formControl]="search"
+        placeholderLabel="{{ searchPlaceholder }}" [searching]="loading"
         noEntriesFoundLabel="No se encontraron resultados">
       </ngx-mat-select-search>
     </mat-option>
@@ -31,3 +27,8 @@
     </ng-container>
   </mat-select>
 </mat-form-field>
+
+<button class="rounded-button" [disabled]="disabled" (click)="toggleSelect(custom_select)" aria-hidden="true">
+  <span>{{ textValue ?? baseText }}</span>
+  <mat-icon>expand_more</mat-icon>
+</button>
