--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -20,6 +20,8 @@
     font-size: var(--fs-large);
     font-weight: 800;
     gap: .3em;
+    border-radius: 100px;
+    padding-inline: .5em;
 
     img {
         max-height: var(--fs-large);
