--- a/src/assets/styles/design/_components.scss
+++ b/src/assets/styles/design/_components.scss
@@ -96,8 +96,7 @@
 // Cards
 .rounded-card {
     background-color: hsl(var(--clr-white));
-    box-shadow: 0 3px 4px rgba(0, 0, 0, .2);
-
+    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.2);
     border-radius: 15px;
     padding: 1rem;
 }
@@ -105,7 +104,6 @@
 @media (min-width: 48rem) {
     .rounded-card {
         border-radius: 25px;
-        padding: 1.2rem;
     }
 }
 
