--- a/src/app/features/homepage/homepage/homepage.component.html
+++ b/src/app/features/homepage/homepage/homepage.component.html
@@ -1,7 +1,7 @@
 <main class="hero container">
   <div class="hero__text">
     <h1 class="fs-xx-large fw-600 text-blue-dark text-shadow-1">Busca y comparte planificaciones de enseñanza básica</h1>
-    <a class="rounded-button fs-medium fw-600 box-shadow-2" [routerLink]="['/', 'results']">
+    <a class="rounded-button fs-medium fw-600 box-shadow-2" matRipple [routerLink]="['/', 'results']">
       <span>Ver planificaciones</span>
       <mat-icon>arrow_forward</mat-icon>
     </a>
