--- a/src/app/shared/components/report-dialog/report-dialog.component.html
+++ b/src/app/shared/components/report-dialog/report-dialog.component.html
@@ -2,7 +2,7 @@
 <p class="m-y-1">Completa los siguientes datos explicando el motivo de tu reporte y lo revisaremos a la brevedad.</p>
 <div mat-dialog-content>
   <form [formGroup]="form" (ngSubmit)="createReport($event)">
-    <mat-form-field appearance="outline" class="full-width-input">
+    <mat-form-field appearance="outline" class="w-100">
       <mat-label>¿Qué quieres reportar?</mat-label>
       <mat-select formControlName="type">
         <mat-option [value]="reportType.POST">Reportar publicación</mat-option>
@@ -10,7 +10,7 @@
       </mat-select>
     </mat-form-field>
   
-    <mat-form-field appearance="outline" class="full-width-input">
+    <mat-form-field appearance="outline" class="w-100">
       <mat-label>Descripción</mat-label>
       <textarea matInput formControlName="description" cdkTextareaAutosize cdkAutosizeMinRows="3"
         cdkAutosizeMaxRows="20">
@@ -22,7 +22,7 @@
     </mat-form-field>
   </form>
 </div>
-<div mat-dialog-actions align="end">
+<div class="flex-end-center flex-wrap-reverse gap-05 m-t-1">
   <button mat-flat-button type="button" mat-dialog-close>
     Cancelar
   </button>
