--- a/src/app/features/results/results-list/results-list.component.html
+++ b/src/app/features/results/results-list/results-list.component.html
@@ -59,7 +59,6 @@
           [control]="orderingControl"
           [options]="orderingList">
         </app-rounded-select>
-    
       </div>
       <button class="reset-filters-button" *ngIf="hasFilters" (click)="removeFilters()">
         <mat-icon class="small-icon">delete</mat-icon>
@@ -115,7 +114,7 @@
           <button class="circle-button" (click)="previousPage()" [disabled]="!pageInfo?.previous || isLoading" aria-label="Pág. Anterior" matTooltip="Pág. Anterior" matRipple>
             <mat-icon class="small-icon">navigate_before</mat-icon>
           </button>
-          <button class="circle-button" [matMenuTriggerFor]="pagesMenu" aria-label="Seleccionar página" matTooltip="Seleccionar página" matRipple>
+          <button class="circle-button fs-medium" [matMenuTriggerFor]="pagesMenu" aria-label="Seleccionar página" matTooltip="Seleccionar página" matRipple>
             <span class="fs-small fw-700">{{ postFilters.page }}</span>
           </button>
           <mat-menu #pagesMenu>
@@ -132,11 +131,11 @@
 
     <!-- Post grid -->
     <section class="posts-grid">
-      <div class="rounded-card flex-column flex-space_between gap-1" *ngFor="let post of posts">
+      <div class="rounded-card flex-column flex-space_between gap-07" *ngFor="let post of posts">
         <div class="flex-space_between-center">
           <p>{{ post.user.fullName }} - {{ post.createdAt|timeAgo }}</p>
 
-          <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Opciones" matTooltip="Opciones">
+          <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Opciones" matTooltip="Opciones" class="reset-mat-icon-button">
             <mat-icon class="text-blue-dark">more_vert</mat-icon>
           </button>
           <mat-menu #menu="matMenu">
