--- a/src/app/features/results/results-list/results-list.component.scss
+++ b/src/app/features/results/results-list/results-list.component.scss
@@ -43,6 +43,7 @@
     flex-direction: column;
     justify-content: flex-start;
     gap: .7rem;
+    font-weight: 500;
 }
 
 .reset-filters-button {
