--- a/src/assets/styles/material/_overloads.scss
+++ b/src/assets/styles/material/_overloads.scss
@@ -51,3 +51,11 @@
         border-radius: 25px !important;
     }
 }
+
+
+// Utils
+.reset-mat-icon-button {
+    width: auto !important;
+    height: auto !important;
+    line-height: unset !important;
+}
