--- a/src/app/shared/components/report-dialog/report-dialog.component.html
+++ b/src/app/shared/components/report-dialog/report-dialog.component.html
@@ -1,4 +1,4 @@
-<h1>Crear un reporte 🕵️</h1>
+<h1 class="fs-large">Crear un reporte 🕵️</h1>
 <p class="m-y-1">Completa los siguientes datos explicando el motivo de tu reporte y lo revisaremos a la brevedad.</p>
 <div mat-dialog-content>
   <form [formGroup]="form" (ngSubmit)="createReport($event)">
