--- a/src/app/features/results/results-list/results-list.component.html
+++ b/src/app/features/results/results-list/results-list.component.html
@@ -8,7 +8,7 @@
           {{ showFilterCardContent && !isDesktop ? 'expand_less' : 'filter_alt' }}
         </mat-icon>
     </button>
-    <div class="filters-card__content" *ngIf="showFilterCardContent">
+    <div class="filters-card__content" *ngIf="showFilterCardContent" @inOutY>
       <!-- Searchbar -->
       <div class="rounded-search-bar">
         <input type="search" [formControl]="searchControl" placeholder="Buscar" (keyup.enter)="doSearch(1)">
@@ -60,7 +60,7 @@
           [options]="orderingList">
         </app-rounded-select>
       </div>
-      <button class="reset-filters-button" *ngIf="hasFilters" (click)="removeFilters()">
+      <button class="reset-filters-button" *ngIf="hasFilters" (click)="removeFilters()" matRipple @inOutRight>
         <mat-icon class="small-icon">delete</mat-icon>
         <span class="fw-600">Borrar filtros</span>
       </button>
@@ -73,29 +73,33 @@
       <!-- Filter tags -->
       <div class="filter-tags flex-center-center gap-025 flex-wrap">
         <button
-          *ngIf="!!academicLevelControl.value"
+          *ngIf="!!academicLevelControl.value" @inOutLeft
           (click)="removeFilter('academicLevel')"
+          matRipple
           class="rounded-button-slim bg-text-academic-level">
             <span>{{ academicLevelControl.value.data.name }}</span>
             <mat-icon class="small-icon" matTooltip="Remover">close</mat-icon>
         </button>
         <button
-          *ngIf="!!axisControl.value"
+          *ngIf="!!axisControl.value" @inOutLeft
           (click)="removeFilter('axis')"
+          matRipple
           class="rounded-button-slim bg-text-axis">
             <span>{{ axisControl.value.data.name }}</span>
             <mat-icon class="small-icon" matTooltip="Remover">close</mat-icon>
         </button>
         <button
-          *ngIf="!!subjectControl.value"
+          *ngIf="!!subjectControl.value" @inOutLeft
           (click)="removeFilter('subject')"
+          matRipple
           class="rounded-button-slim bg-text-subject">
             <span>{{ subjectControl.value.data.name }}</span>
             <mat-icon class="small-icon" matTooltip="Remover">close</mat-icon>
         </button>
         <button
-          *ngIf="!!orderingControl.value && orderingControl.value.data.id !== orderingType.MOST_RECENT"
+          *ngIf="!!orderingControl.value && orderingControl.value.data.id !== orderingType.MOST_RECENT" @inOutLeft
           (click)="removeFilter('ordering')"
+          matRipple
           class="rounded-button-slim bg-text-blue-white">
             <mat-icon class="small-icon">sort</mat-icon>
             <span>{{ orderingControl.value.data.name }}</span>
@@ -105,7 +109,7 @@
     
       <!-- Pagination -->
       <div class="pagination flex-center-center gap-05">
-        <span class="fw-700 fs-regular">
+        <span class="fw-700 fs-regular" *ngIf="!isLoading && hasData" @inOutRight>
           {{ (pageInfo?.maxPage ?? 0) * (postFilters.page! - 1) + 1 }}
            - {{ (pageInfo?.maxPage ?? 0) * (postFilters.page! - 1) + posts.length }}
           de {{ pageInfo?.count }}
@@ -131,7 +135,7 @@
 
     <!-- Post grid -->
     <section class="posts-grid">
-      <div class="rounded-card flex-column flex-space_between gap-07" *ngFor="let post of posts">
+      <div class="rounded-card flex-column flex-space_between gap-07" *ngFor="let post of posts" @inOutY>
         <div class="flex-space_between-center">
           <p>{{ post.user.fullName }} - {{ post.createdAt|timeAgo }}</p>
 
