--- a/src/assets/styles/design/_components.scss
+++ b/src/assets/styles/design/_components.scss
@@ -139,3 +139,51 @@
     border-color: hsl(var(--clr-orange));
     color: hsl(var(--clr-orange));
 }
+
+// Shimmers loadings
+.shimmer-loading,
+.shimmer-text-large,
+.shimmer-text-regular {
+    animation-duration: 2.2s;
+    animation-fill-mode: forwards;
+    animation-iteration-count: infinite;
+    animation-name: shimmer;
+    animation-timing-function: linear;
+    background: #f6f7f8;
+    background: linear-gradient(to right, #f6f7f8 0%, #edeef1 20%, #f6f7f8 40%, #f6f7f8 100%);
+    background-size: 1200px 100%;
+}
+
+@-webkit-keyframes shimmer {
+    0% {
+        background-position: -100% 0;
+    }
+    100% {
+        background-position: 100% 0;
+    }
+}
+
+@keyframes shimmer {
+    0% {
+        background-position: -1200px 0;
+    }
+    100% {
+        background-position: 1200px 0;
+    }
+}
+
+.shimmer-text-large {
+    height: var(--fs-large);
+    border-radius: 20px;
+    margin-bottom: calc(var(--fs-large) / 4);
+}
+
+.shimmer-text-regular {
+    height: var(--fs-regular);
+    border-radius: 8px;
+    margin-bottom: calc(var(--fs-regular) / 4);
+}
+
+.shimmer-text-color {
+    color: #edeef1;
+}
