--- a/src/assets/styles/helpers/_box-model.scss
+++ b/src/assets/styles/helpers/_box-model.scss
@@ -1,7 +1,25 @@
+// Width
 .w-100 {
     width: 100%;
 }
 
+.w-50 {
+    width: 50%;
+}
+
+.w-40 {
+    width: 40%;
+}
+
+.w-30 {
+    width: 30%;
+}
+
+.w-20 {
+    width: 20%;
+}
+
+// Margin
 .m-y-1 {
     margin-block: 1rem;
 }
