fix(main-layout, navbar): add blur

--- a/src/app/layouts/main-layout/main-layout.component.scss
+++ b/src/app/layouts/main-layout/main-layout.component.scss
@@ -30,6 +30,7 @@
     max-width: 224px;
 
     background-color: hsl(var(--clr-blue-dark), .7);
+    backdrop-filter: blur(5px);
 }
 
 @media (min-width: 48rem) {
