feat(app): add animation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,5 @@
 </ng-container>
 
 <div class="loader" *ngIf="!isAuthCompleted || this.inMaintenance">
-    <app-book-loader></app-book-loader>
+    <app-book-loader @inOutY></app-book-loader>
 </div>
