--- a/src/app/features/results/results-list/results-list.component.html
+++ b/src/app/features/results/results-list/results-list.component.html
@@ -11,7 +11,7 @@
     <div class="filters-card__content" *ngIf="showFilterCardContent" @inOutY>
       <!-- Searchbar -->
       <div class="rounded-search-bar">
-        <input type="search" [formControl]="searchControl" placeholder="Buscar" (keyup.enter)="doSearch(1)">
+        <input type="search" [formControl]="searchControl" placeholder="Buscar" (keyup.enter)="doSearch(1); updateHasFilters()">
         <button *ngIf="!!postFilters.search && postFilters.search === searchControl.value" mat-icon-button (click)="clearSearchControl()" matTooltip="Borrar">
           <mat-icon>close</mat-icon>
         </button>
@@ -73,6 +73,15 @@
       <!-- Filter tags -->
       <div class="filter-tags flex-center-center gap-025 flex-wrap">
         <button
+          *ngIf="!!postFilters.search && !!searchControl.value" @inOutLeft
+          (click)="removeFilter('search')"
+          matRipple
+          class="rounded-button-slim">
+            <mat-icon class="small-icon">search</mat-icon>
+            <span>{{ postFilters.search|truncate:20  }}</span>
+            <mat-icon class="small-icon" matTooltip="Remover">close</mat-icon>
+        </button>
+        <button
           *ngIf="!!academicLevelControl.value" @inOutLeft
           (click)="removeFilter('academicLevel')"
           matRipple
@@ -118,7 +127,7 @@
           <button class="circle-button" (click)="previousPage()" [disabled]="!pageInfo?.previous || isLoading" aria-label="Pág. Anterior" matTooltip="Pág. Anterior" matRipple>
             <mat-icon class="small-icon">navigate_before</mat-icon>
           </button>
-          <button class="circle-button fs-medium" [matMenuTriggerFor]="pagesMenu" aria-label="Seleccionar página" matTooltip="Seleccionar página" matRipple [disabled]="isLoading">
+          <button class="circle-button fs-medium" [matMenuTriggerFor]="pagesMenu" aria-label="Seleccionar página" matTooltip="Seleccionar página" matRipple [disabled]="isLoading || !hasData">
             <span class="fs-small fw-700">{{ postFilters.page }}</span>
           </button>
           <mat-menu #pagesMenu>
@@ -134,8 +143,8 @@
     </div>
 
     <!-- Post grid -->
-    <section class="posts-grid" *ngIf="!isLoading && hasData">
-      <div class="rounded-card flex-column flex-space_between gap-07" *ngFor="let post of posts" @fadeInOut>
+    <section class="posts-grid" *ngIf="!isLoading && hasData" @fadeInOut>
+      <div class="rounded-card flex-column flex-space_between gap-07" *ngFor="let post of posts">
         <div class="flex-space_between-center">
           <p>{{ post.user.fullName }} - {{ post.createdAt|timeAgo }}</p>
 
@@ -199,9 +208,9 @@
     </section>
 
     <!-- Post shimmer grid -->
-    <div class="posts-grid" *ngIf="isLoading">
+    <div class="posts-grid" *ngIf="isLoading" @fadeInOut>
       <!-- Post card shimmer -->
-      <div class="rounded-card flex-column flex-space_between gap-07" *ngFor="let post of 6|fillArray" @fadeInOut>
+      <div class="rounded-card flex-column flex-space_between gap-07" *ngFor="let post of 6|fillArray">
         <div class="flex-space_between-center">
           <div class="shimmer-text-regular grow-1"></div>
           <mat-icon class="shimmer-text-color">more_vert</mat-icon>
@@ -246,6 +255,13 @@
           <mat-icon class="shimmer-text-color">favorite</mat-icon>
         </div>
       </div>
+    </div>
+
+    <!-- No results -->
+    <div class="flex-column flex-center-center text-center gap-05 m-t-2" *ngIf="!hasData && !isLoading" @fadeInOut>
+      <img class="no-results-image" src="assets/images/no-results.png" alt="Perdido en el espacio">
+      <p class="fs-medium fw-700">No se han encontrado resultados</p>
+      <p class="fw-700">Aún nadie ha creado una publicación con tus parámetros de búsqueda 😅</p>
     </div>
   </div>
 </main>
