--- a/src/app/features/results/results-list/results-list.component.scss
+++ b/src/app/features/results/results-list/results-list.component.scss
@@ -119,3 +119,8 @@
         grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
     }
 }
+
+.no-results-image {
+    width: 80%;
+    max-width: 400px;
+}
