--- a/src/assets/styles/helpers/_util.scss
+++ b/src/assets/styles/helpers/_util.scss
@@ -13,6 +13,7 @@
 }
 
 .uppercase { text-transform: uppercase; }
+.text-center { text-align: center; }
 
 .reset-link-style {
     text-decoration: inherit;
