--- a/src/app/features/results/results-list/results-list.component.html
+++ b/src/app/features/results/results-list/results-list.component.html
@@ -152,9 +152,13 @@
             <mat-icon class="text-blue-dark">more_vert</mat-icon>
           </button>
           <mat-menu #menu="matMenu">
-            <button mat-menu-item (click)="report(post)">
+            <button mat-menu-item (click)="report(post)" *ngIf="post.user.id !== user?.id">
               <mat-icon>report</mat-icon>
               <span>Reportar</span>
+            </button>
+            <button mat-menu-item (click)="deletePost(post)" *ngIf="post.user.id === user?.id">
+              <mat-icon>delete</mat-icon>
+              <span>Eliminar</span>
             </button>
           </mat-menu>
         </div>
